Bug 156050 - Multiple squiggly lines under misspelled words in RTL text boxes
Summary: Multiple squiggly lines under misspelled words in RTL text boxes
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Khaled Hosny
URL:
Whiteboard: target:24.2.0 target:7.6.0.0.beta2 ta...
Keywords: bibisected, regression
Depends on:
Blocks: Spell-Checking RTL
  Show dependency treegraph
 
Reported: 2023-06-25 11:14 UTC by Hossein
Modified: 2024-08-03 09:15 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
ODT file containing a text box with misspelled words (12.23 KB, application/vnd.oasis.opendocument.text)
2023-06-25 11:14 UTC, Hossein
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Hossein 2023-06-25 11:14:18 UTC
Created attachment 188082 [details]
ODT file containing a text box with misspelled words

Description:
After fixing tdf#151968, a new problem appeared: drawing multiple squiggly lines under misspelled words in text box.

Steps to Reproduce:
1. Open the attachment
2. Double click on the text

Actual Results:  
Multiple squiggly line segments are drawn below many words, creating clutter.

Expected Results:
Squiggly line segments should be drawn below the wrong words, exactly one squiggly line segment under one misspelled word.

Reproducible: Always

User Profile Reset: No

Additional Info:
Comment 1 Hossein 2023-06-25 11:16:04 UTC
The problem is reproducible with the latest LO 24.2 dev master:

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: bea05a79c8ed565909e341a24b298d8deab7e042
CPU threads: 12; OS: Linux 5.19; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 2 Hossein 2023-06-25 14:48:07 UTC
Two notes:

1. The problem is not reproducible with LO 7.5, so it is a regression.

Version: 7.5.1.2 (X86_64) / LibreOffice Community
Build ID: fcbaee479e84c6cd81291587d2ee68cba099e129
CPU threads: 12; OS: Linux 5.19; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: CL threaded

2. To test LO dev, you need to have spell checker for Persian, or other languages you want to test.
Comment 3 Hossein 2023-06-25 23:55:38 UTC
Result of my bisect on Linux:
 74b6c5ea3c333de7c5e7ef8636732edadd9083f2 is the first bad commit
commit 74b6c5ea3c333de7c5e7ef8636732edadd9083f2
Author: Khaled Hosny <khaled@libreoffice.org>
Date:   Thu Jun 8 16:41:18 2023 +0300

tdf#151968: Fix vertical position of RTL spelling wavy line
Comment 4 Eyal Rozenberg 2023-06-26 06:52:47 UTC
Thanks as always for working on this :-)

Please consider finding time to come on to the RTL channel for a chat.
Comment 5 Commit Notification 2023-06-26 09:34:10 UTC
Khaled Hosny committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/2ef138de767c312188d41a7f206234eafac3108b

tdf#156050: Fix how misspelling line is calculated for RTL text

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Hossein 2023-06-26 09:52:48 UTC
Thanks Khaled!

Verified fix with the latest LO 24.2 dev master:

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 2ef138de767c312188d41a7f206234eafac3108b
CPU threads: 12; OS: Linux 5.19; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 7 Commit Notification 2023-06-26 10:54:19 UTC
Khaled Hosny committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/ec3f62e1380af73313e61e715d79e2402d44c702

tdf#156050: Fix how misspelling line is calculated for RTL text

It will be available in 7.6.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2023-06-27 09:17:30 UTC
Khaled Hosny committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/83155f319f46dc348f6f90b23e816f87e80e65e1

tdf#156050: Fix how misspelling line is calculated for RTL text

It will be available in 7.5.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.